force-app/main/default/objects/Event_Expenses__c/Event_Expenses__c.object-meta.xml
<CustomObject>
    <description>Expenses related to the campaign.</description>
    <label>Event Expenses</label>
    <nameField>
        <label>Event Expenses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>