force-app/main/default/objects/Event_Expenses__c/fields/Attendee_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Expenses__c</fullName>
    <description>All expenses related to attendees from expense reports and bills (i.e. flight, lodging, food, etc.).</description>
    <inlineHelpText>All expenses related to attendees from expense reports and bills (i.e. flight, lodging, food, etc.).</inlineHelpText>
    <label>Attendee Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>