force-app/main/default/objects/Event_Expenses__c/fields/Booth_Traffic__c.field-meta.xml
<CustomField>
    <fullName>Booth_Traffic__c</fullName>
    <description>Expenses related to booth traffic.</description>
    <inlineHelpText>Enter expenses related to booth traffic.</inlineHelpText>
    <label>Booth Traffic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>