force-app/main/default/objects/Event_Expenses__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments or notes related to event expenses.</description>
    <inlineHelpText>Comments or notes related to event expenses.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>