force-app/main/default/objects/Event_Expenses__c/fields/Customer_Appreciation_Dinners__c.field-meta.xml
<CustomField>
    <fullName>Customer_Appreciation_Dinners__c</fullName>
    <description>Expenses related to customer appreciation dinners.</description>
    <inlineHelpText>Enter expenses related to customer appreciation dinners.</inlineHelpText>
    <label>Customer Appreciation Dinners</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>