force-app/main/default/objects/Event_Expenses__c/fields/Marketing_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Expenses__c</fullName>
    <description>Any expenses related to 7Summits marketing efforts (i.e. swag, media, etc.)</description>
    <inlineHelpText>Any expenses related to 7Summits marketing efforts (i.e. swag, media, etc.)</inlineHelpText>
    <label>Marketing Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>