force-app/main/default/objects/Event_Expenses__c/fields/Miscellaneous_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Expenses__c</fullName>
    <description>All expenses not related to other categories (i.e. entertainment, incidentals, etc.).</description>
    <inlineHelpText>All expenses not related to other categories (i.e. entertainment, incidentals, etc.).</inlineHelpText>
    <label>Miscellaneous Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>