force-app/main/default/objects/Event_Expenses__c/fields/Org_Space__c.field-meta.xml
<CustomField>
    <fullName>Org_Space__c</fullName>
    <description>Expenses related to any org spaces.</description>
    <inlineHelpText>Enter expenses related to any org spaces.</inlineHelpText>
    <label>Org Space</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>