force-app/main/default/objects/Event_Expenses__c/fields/Speaking_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Speaking_Sessions__c</fullName>
    <description>Any expenses associated with speaking sessions.</description>
    <inlineHelpText>Enter expenses for any speaking sessions.</inlineHelpText>
    <label>Speaking Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>