force-app/main/default/objects/Event_Expenses__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>Attendee_Expenses__c +  Marketing_Expenses__c +  Miscellaneous_Expenses__c +  X10x10_Meetings__c  +  Booth_Traffic__c +  Org_Space__c +  Speaking_Sessions__c +  Sponsorsip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>