force-app/main/default/objects/Event_Expenses__c/fields/X10x10_Meetings__c.field-meta.xml
<CustomField>
    <fullName>X10x10_Meetings__c</fullName>
    <description>Cost of meetings.</description>
    <inlineHelpText>Enter the cost of any 10x10 meetings.</inlineHelpText>
    <label>10x10 Meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>