force-app/main/default/objects/Event_Expenses__c/recordTypes/Sponsorship_Expenses.recordType-meta.xml
<RecordType>
    <fullName>Sponsorship_Expenses</fullName>
    <active>true</active>
    <label>Sponsorship Expenses</label>
</RecordType>