force-app/main/default/objects/Event_Expenses__c/recordTypes/Standard_Expenses.recordType-meta.xml
<RecordType>
    <fullName>Standard_Expenses</fullName>
    <active>true</active>
    <label>Standard Expenses</label>
</RecordType>